<resources>
    <string name="app_name">BillMe</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="login_hint">Email or Username</string>
    <string name="login_hint_pw">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="login_btn">Go</string>
    <string name="login_header">BillMe</string>
    <string name="days_left">Days Left</string>
    <string name="register">Register</string>
    <string name="password_mismatch">Passwords don\'t match</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="back_to_exit">Press back again to exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
</resources>
